k8s-manifests/nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginxdeployment
  ports:
    - protocol: TCP
      port: 80
