k8s-manifests/nginx/nginx-ingress.yaml
# nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-ingress
spec:
  ingressClassName: nginx-service
  rules:
    - host: nginx.mhmdiamd.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: go-social-service-staging
                port:
                  number: 4000
